css/main.css
/* ... */
/*
 * Remove the gap between audio, canvas, iframes,
 * images, videos and the bottom of their containers:
 * https://github.com/h5bp/html5-boilerplate/issues/440
 */

audio,
canvas,
iframe,
img,
svg,
video {
  vertical-align: middle;
}

/*
 * Remove default fieldset styles.
 */

fieldset {
  border: 0;
  margin: 0;
  padding: 0;
}

/*
 * Allow only vertical resizing of textareas.
 */

textarea {
  resize: vertical;
}

/* ==========================================================================
   Browser Upgrade Prompt
   ========================================================================== */

.browserupgrade {
  margin: 0.2em 0;
  background: #ccc;
  color: #000;
  padding: 0.2em 0;
}

/* ==========================================================================
   													DEFAULT/MOBILE STYLES
   ========================================================================== */
/* === General Styles === */
html {
  font-size: 14px;
  margin: 0 auto;
}

body {
  font-family: "Montserrat", sans-serif;
  font-size: 1em;
  background-color: #f9fafc;
  color: #4d39d1;
  width: 100%;
  margin: 0 auto;
  padding: 0;
}

main {
  display: block;
  overflow: hidden;
  position: relative;
}

a {
  text-decoration: none;
  color: #4d39d1;
  transition: all 0.3s;
}

p {
  font-size: 1em;
  font-weight: 400;
  line-height: 1.4em;
}

h1 {
  font-size: 3.5em;
  font-weight: 900;
  margin: 0 auto;
  padding: 0 0 10px 0;
}

h2 {
  font-size: 1.333em;
  font-weight: 300;
  margin: 0 auto;
  padding: 0;
  line-height: 1.5em;
}

h3 {
  font-size: 1.5em;
  font-weight: 700;
  margin: 0.7em auto;
  padding: 0;
}

h4 {
  font-size: 1.4em;
  font-weight: 700;
  margin: 0.7em auto;
  padding: 0;
}

section {
  margin: 60px auto;
}

img {
  width: 100%;
  height: auto;
}

.button {
  background-color: #fb746c;
  border-radius: 50px;
  text-align: center;
  text-decoration: none;
  font-size: 1.4em;
  font-weight: 400;
  color: #f9fafc;
  padding: 10px 20px;
  /*line-height: 65px;*/
}

.rounded-square-container {
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
  min-height: 90vh;
  margin: 0 auto;
  border-radius: 50px;
  box-shadow: 6px 9px 23px 0px rgba(117, 138, 180, 0.2);
  -webkit-box-shadow: 6px 9px 23px 0px rgba(117, 138, 180, 0.2);
  -moz-box-shadow: 6px 9px 23px 0px rgba(117, 138, 180, 0.2);
}
/* === AOS Custom Animaton ==*/

[data-aos="my-easing"] {
  transform: translateX(-100%);
  transition: all 0.5s;
  transition-timing-function: cubic-bezier(0.2, 3, 0.4, 2);
  transition-property: transform;
}
[data-aos="my-easing"].aos-animate {
  transform: translateX(0);
}
/* === Header - Footer === */
/* Menu */
#menu-content {
  visibility: hidden;
  position: fixed;
  display: flex;
  justify-content: center;
  align-items: center;
  color: #fff;
  top: 0;
  right: 0;
  text-align: center;
  font-size: 2.3em;
  font-weight: 700;
  text-transform: uppercase;
}

.open #menu-content {
  top: 97px;
  width: 100%;
  visibility: visible;
  z-index: 1001;
}

#menu-content ul {
  padding: 0;
}

#menu-content ul li a {
  color: #fff;
}

#menu-content ul li {
  opacity: 0;
  transform: translateX(50px);
  overflow: hidden;
}

.open #menu-content ul li {
  opacity: 1;
  transform: translateX(0);
  transition: all 0.5s;
  transition-timing-function: cubic-bezier(0.2, 3, 0.4, 1);
  transition-delay: 0.27s;
}

.open #menu-content ul li:nth-child(2) {
  transition-delay: 0.37s;
}

.open #menu-content ul li:nth-child(3) {
  transition-delay: 0.47s;
}

.open #menu-content ul li:nth-child(4) {
  transition-delay: 0.57s;
}

#menu-bg {
  content: "";
  height: 30px;
  width: 30px;
  border-radius: 50%;
  background-color: #fb746c;
  position: fixed;
  top: 14px;
  right: 9px;
  -webkit-transition: all 0.3s ease-out;
  transition: all 0.3s ease-out;
  -webkit-transform: scale(1);
  transform: scale(1);
  overflow: hidden;
  z-index: 1000;
}

.open #menu-bg {
  transform: scale(50, 35);
  transition: all 1s ease-out;
}

#menu-toggle {
  display: block;
  position: fixed;
  right: 16.5px;
  top: 19px;
  width: 15px;
  height: 20px;
  cursor: pointer;
  z-index: 1002;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
}

#menu-toggle div {
  position: relative;
  display: flex;
  flex-direction: column;
}

#menu-span {
  height: 2px;
  width: 100%;
  padding: 0;
  background: #fff;
  zoom: 1;
  -webkit-transition: 0.35s ease-in-out;
  transition: 0.35s ease-in-out;
  margin: 2px 0;
  line-height: unset;
}

#menu-span :nth-child(1) {
  top: 0;
}

#menu-span :nth-child(2) {
  top: 8px;
}
#menu-span :nth-child(3) {
  top: 16px;
}

.open #menu-span:nth-child(1) {
  transform: translateY(8px) rotate(135deg) scaleX(1.5);
  height: 4px;
}

.open #menu-span:nth-child(2) {
  width: 0;
}

.open #menu-span:nth-child(3) {
  transform: translateY(-6px) rotate(45deg) scaleX(1.5);
  height: 4px;
}

/*Nav menu links*/
ul {
  list-style: none;
  padding: 0.5em 0 0 0;
  margin: 0 auto;
  text-align: center;
}

ul li {
  padding: 18px;
}

ul li a {
  text-decoration: none;
  text-align: center;
  color: #4d39d1;
}

/*Footer*/
footer {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-flow: column wrap;
}

.social {
  display: flex;
  flex-flow: row nowrap;
  justify-content: space-around;
  margin-top: 0.5em;
  margin-bottom: 0.5em;
}

.social-icons {
  display: flex;
}

.social-icons p {
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: #fb746c;
  border-radius: 50%;
  width: 40px;
  height: 40px;
  margin: 0 1em 1em 1em;
}

.social-icons a {
  color: #f9fafc;
}

.lastly {
  display: flex;
  justify-content: center;
  align-items: flex-end;
  flex-flow: column wrap;
}

/* == SVG ==*/
.svg-lt,
.svg-lm,
.svg-lb,
.svg-rt,
.svg-rm,
.svg-rb {
  position: absolute;
  z-index: -10;
  width: 124%;
}

.svg-lt {
  left: -83vw;
  top: -8vh;
  right: auto;
  bottom: auto;
  filter: drop-shadow(15px 10px 0px #f3f3f3);
}
/* ... */

